system/haproxy-ingress/resources/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass

metadata:
  name: haproxy

spec:
  controller: haproxy.org/ingress-controller
